fix: wrap them form field childrens

--- a/packages/components/src/FormField/FormField.css
+++ b/packages/components/src/FormField/FormField.css
@@ -139,6 +139,11 @@
   position: relative;
 }
 
+.childrenWrapper {
+  position: relative;
+  flex: 1;
+}
+
 /**
  * Input
  **/
@@ -169,20 +174,11 @@
   resize: vertical;
 }
 
-.select {
-  --field--padding-top: 0;
-  --field--padding-bottom: 0;
-}
-
 .input:-webkit-autofill,
 .input:-webkit-autofill:hover,
 .input:-webkit-autofill:focus,
 .input:-webkit-autofill:active {
   -webkit-box-shadow: 0 0 0 30px var(--color-surface) inset !important;
-}
-
-.miniLabel.select:not(.small) .input {
-  --field--padding-top: var(--space-small);
 }
 
 /**
